# nobelmap

./: README.md  model.py  pyproject.toml  shell.nix
app/: data.py  db.py  main.py  migrations.py  models.py  nobeldata.db  nobeldata.db-journal  nobelwinner.sql  nobelwinners
app/static/scripts/: script.js
app/templates/: index.html
