[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dominik Boehler <dominik.boehler@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
exceptiongroup = "1.2.0"
fastapi = "0.105.0"
greenlet = "3.0.2"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.6"
pydantic = "2.5.2"
pydantic-extra-types = "2.2.0"
pydantic-core = "2.14.5"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
sqlmodel = "0.0.14"
starlette = "0.27.0"
typing-extensions = "4.9.0"
uvicorn = "0.24.0.post1"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"
geojson-pydantic = "^1.0.1"
pycountry = "^23.12.11"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
